[package]
name = "xiao_m0_example"
version = "0.1.0"
authors = ["gensyu <gensyuu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
embedded-hal = "0.2.5"
xiao_m0 = "0.9.0"

[dependencies.cortex-m-rt]
version = "0.6.14"
optional = true

[dependencies.atsamd-hal]
version = "0.12"
default-features = false

[dependencies.usb-device]
version = "0.2"
optional = true

[dependencies.usbd-serial]
version = "0.1"
optional = true

[dev-dependencies]
panic-halt = "0.2"

[features]
default = ["rt", "atsamd-hal/samd21g"]
rt = ["cortex-m-rt", "atsamd-hal/samd21g-rt"]
unproven = ["atsamd-hal/unproven"]
usb = ["atsamd-hal/usb", "usb-device", "usbd-serial"]

[[example]]
name = "blink"

[profile.release]
lto = true
opt-level = "s"